<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastroChampions"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_cadastro_champion"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_margin="10sp"/>

            <EditText
                android:id="@+id/editTextNomeChampion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nome_champion"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="10sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_escolha_rota"
                android:textColor="@color/white"
                android:layout_margin="10sp"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_margin="10sp">

                <CheckBox
                    android:id="@+id/checkBoxMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="68dp"
                    android:buttonTint="#E1DEDE"
                    android:shadowColor="@color/tealA100"
                    android:text="@string/mid_laner"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:textColorLink="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkBoxTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="16dp"
                    android:buttonTint="#FFFFFF"
                    android:checked="false"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/top_laner"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:useMaterialThemeColors="false" />

                <CheckBox
                    android:id="@+id/checkBoxSuport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="76dp"
                    android:layout_marginEnd="68dp"
                    android:buttonTint="#FFFFFF"
                    android:shadowColor="@color/tealA100"
                    android:text="@string/suport_laner"
                    android:textColor="@color/black"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxMid" />

                <CheckBox
                    android:id="@+id/checkBoxJungle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/jungle"
                    android:textColor="@color/black"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:useMaterialThemeColors="false" />

                <CheckBox
                    android:id="@+id/checkBoxAdc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="76dp"
                    android:buttonTint="#FFFFFF"
                    android:text="@string/adc_laner"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxTop"
                    app:useMaterialThemeColors="false" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Spinner
                android:id="@+id/spinnerTier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerTier"
                android:layout_margin="10sp" />

            <Button
                android:id="@+id/buttonCadastrarChampion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_cadastrar_champions"
                android:layout_margin="10sp"/>

            <Button
                android:id="@+id/buttonVoltarInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voltar_tela_inicial"
                android:layout_margin="10sp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>